--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="6dp"
     android:elevation="6dp"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    app:cardBackgroundColor="#80B0C4E6">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -16,8 +18,9 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="5dp"
         android:elevation="6dp"
-        app:cardCornerRadius="6dp"
-        app:cardUseCompatPadding="true">
+        app:cardCornerRadius="20dp"
+        app:cardUseCompatPadding="true"
+        app:cardBackgroundColor="@color/AzulCeleste">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -30,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Dia"
+                android:text="Día"
                 android:textColor="#000"
                 android:textSize="25sp"
                 android:textStyle="bold" />
