--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Activity_inicio"
-    android:background="@drawable/img_2">
+    android:background="@drawable/fondo_degradado2">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -34,8 +34,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="42sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:gravity="center"
         android:text="Bienvenido a este nuevo mundo, a continuación se te solicitarán algunos datos, pulsa Continuar para seguir con el proceso" />
-        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -47,10 +50,13 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="70pt"
+        android:layout_marginLeft="55pt"
         android:layout_marginTop="40pt"
         android:text="Continuar"
-        android:onClick="Continue"/>
+        android:textStyle="bold"
+        android:textSize="24dp"
+        android:backgroundTint="@color/AzulCeleste"
+        android:onClick="Continue" />
 
     </LinearLayout>
 </LinearLayout>
