--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="42sp"
+            android:textColor="@color/AzulMarino"
             android:text="Selecciona el rango de tus datos" />
     </LinearLayout>
 
@@ -50,7 +51,7 @@
             android:textAlignment="textEnd"
             android:textSize="24dp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/AzulMarino"
             android:text="Edad: " />
 
         <Spinner
@@ -74,7 +75,7 @@
             android:textAlignment="textEnd"
             android:textSize="24dp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/AzulMarino"
             android:text="Genero: " />
 
         <Spinner
@@ -92,30 +93,6 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAlignment="textEnd"
-            android:textSize="24dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:text="Peso: " />
-
-        <Spinner
-            android:id="@+id/Peso"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:orientation="horizontal">
-
-        <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -123,7 +100,7 @@
             android:textAlignment="textEnd"
             android:textSize="24dp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/AzulMarino"
             android:text="Altura: " />
 
         <Spinner
@@ -133,32 +110,44 @@
             android:layout_weight="1" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="37dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="textEnd"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:textColor="@color/AzulMarino"
+            android:text="Peso: " />
+
+        <Spinner
+            android:id="@+id/Peso"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/Enviar"
-            android:layout_width="230dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:text="Enviar Datos"
+            android:text="Enviar datos y aplicar rutina"
             android:textStyle="bold"
             android:textSize="24dp"
             android:backgroundTint="@color/AzulCeleste"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="100dp"
-        android:text="Hacer ejercicio"
-        android:textStyle="bold"
-        android:textSize="24dp"
-        android:backgroundTint="@color/AzulCeleste"
-        android:onClick="ejercicio"/>
 
 </LinearLayout>
