--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -58,6 +58,12 @@
                 android:textColor="#000"
                 android:textSize="20sp" />
 
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_below="@+id/Mtipotext"
+                android:id="@+id/imagen"/>
+
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
