--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -21,6 +21,14 @@
             android:layout_marginLeft="0pt"
             android:layout_marginTop="0pt"
             android:src="@drawable/dumbbell_solid" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="137dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="55pt"
+            android:layout_marginTop="0pt"
+            android:src="@drawable/ejercicio" />
     </LinearLayout>
 
     <LinearLayout
@@ -145,7 +153,7 @@
             android:text="Enviar datos y aplicar rutina"
             android:textStyle="bold"
             android:textSize="24dp"
-            android:backgroundTint="@color/AzulCeleste"
+            android:backgroundTint="@color/Azul"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
