--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -13,13 +13,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-    <ImageView
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="137dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="0pt"
+            android:layout_marginBottom="50pt"
+            android:src="@drawable/cpesa"
+            />
+
+        <ImageView
         android:id="@+id/imageView1"
         android:layout_width="137dp"
         android:layout_height="100dp"
-        android:layout_marginLeft="115pt"
+        android:layout_marginLeft="55pt"
         android:layout_marginBottom="50pt"
-        android:src="@drawable/dumbbell_solid"
+        android:src="@drawable/lpesa"
         />
     </LinearLayout>
         <LinearLayout
@@ -37,6 +46,6 @@
         android:textStyle="bold"
         android:textSize="24dp"
         android:onClick="bienvenido"
-        android:backgroundTint="@color/AzulCeleste"/>
+        android:backgroundTint="@color/Azul"/>
         </LinearLayout>
 </LinearLayout>
