--- a/app/src/main/res/drawable/fondo_degradado3.xml
+++ b/app/src/main/res/drawable/fondo_degradado3.xml
@@ -4,9 +4,9 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="#6EA6FA"
+                android:angle="90"
                 android:endColor="@android:color/transparent"
-                android:angle="90"/>
+                android:startColor="#6EA6FA" />
         </shape>
     </item>
 </layer-list>
