--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -4,23 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo_degradado2"
     android:orientation="vertical"
-    tools:context=".Activity_inicio"
-    android:background="@drawable/fondo_degradado2">
+    tools:context=".Activity_inicio">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="137dp"
-        android:layout_height="100dp"
-        android:layout_marginLeft="0pt"
-        android:layout_marginTop="0pt"
-        android:src="@drawable/dumbbell_solid" />
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="137dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="0pt"
+            android:layout_marginTop="0pt"
+            android:src="@drawable/dumbbell_solid" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -32,39 +31,37 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="42sp"
-        android:textStyle="bold"
-        android:textColor="@color/AzulMarino"
-        android:gravity="center"
-        android:text="Bienvenido a este nuevo mundo, a continuación se te solicitarán algunos datos, pulsa Continuar para seguir con el proceso" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Se bienvenido a este nuevo mundo, a continuación se te solicitarán algunos datos, pulsa Continuar para seguir con el proceso"
+            android:textColor="@color/AzulMarino"
+            android:textSize="42sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="55pt"
-        android:layout_marginTop="40pt"
-        android:text="Continuar"
-        android:textStyle="bold"
-        android:textSize="24dp"
-        android:backgroundTint="@color/Azul"
-        android:onClick="Continue" />
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="55pt"
+            android:layout_marginTop="40pt"
+            android:backgroundTint="@color/Azul"
+            android:onClick="Continue"
+            android:text="Continuar"
+            android:textSize="24dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 </LinearLayout>
