--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -4,48 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo_degradado"
     android:orientation="vertical"
-    tools:context=".Activity_inicio"
-    android:background="@drawable/fondo_degradado">
+    tools:context=".Activity_inicio">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="137dp"
             android:layout_height="100dp"
             android:layout_marginLeft="0pt"
             android:layout_marginBottom="50pt"
-            android:src="@drawable/cpesa"
-            />
+            android:src="@drawable/cpesa" />
 
         <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="137dp"
-        android:layout_height="100dp"
-        android:layout_marginLeft="55pt"
-        android:layout_marginBottom="50pt"
-        android:src="@drawable/lpesa"
-        />
+            android:id="@+id/imageView1"
+            android:layout_width="137dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="55pt"
+            android:layout_marginBottom="50pt"
+            android:src="@drawable/lpesa" />
     </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Pulsa el boton de Inicio si eres capaz de realizar este reto"
+            android:textColor="@color/AzulMarino"
+            android:textSize="42sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="60pt"
-        android:layout_marginTop="150pt"
-        android:text="Bienvenido"
-        android:textStyle="bold"
-        android:textSize="24dp"
+        android:layout_marginTop="100pt"
+        android:backgroundTint="@color/Azul"
         android:onClick="bienvenido"
-        android:backgroundTint="@color/Azul"/>
-        </LinearLayout>
+        android:text="Inicio"
+        android:textSize="32dp"
+        android:textStyle="bold" />
+
 </LinearLayout>
